--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">모바일 딥러닝</string>
-    <string name="about_description_text">"<![CDATA[ <p>이 앱은 TensorFlow 의 학습된 모델을 사용하여 구현하였습니다. <br /> 기본 구현은 <a href='https://hunkim.github.io/ml/'>"모두를 위한 딥러닝"</a>을 강의하신 김성훈 교수의 교육용 샘플을 사용하여 모델 파일을 만들고, 최적화된 모델을 사용하여 앱에서 사용하는 샘플을 제공합니다. <br /> 강의에 포함되지 않은 머신러닝 알고리즘도 모바일로 단계적으로 구현합니다. </p> <br/>GitHub: <a href=\'https://github.com/nalsil/TensorflowSimApp\'>https://github.com/nalsil/TensorflowSimApp </a> <br/> 무료 참고 ebook: Building Mobile Applications with TensorFlow (<a href=\'http://www.oreilly.com/data/free/building-mobile-applications-with-tensorflow.csp\'>http://www.oreilly.com/data/free/building-mobile-applications-with-tensorflow.csp</a>)   ]]> "</string>
+    <string name="about_description_text">"<![CDATA[ <p>이 앱은 TensorFlow 의 학습된 모델을 사용하여 구현하였습니다. <br /> 기본 구현은 <a href='https://hunkim.github.io/ml/'>"모두를 위한 딥러닝"</a>을 강의하신 김성훈 교수의 교육용 샘플을 사용하여 모델 파일을 만들고, 최적화된 모델을 사용하여 앱에서 사용하는 샘플을 제공합니다. <br /> 강의에 포함되지 않은 머신러닝 알고리즘도 모바일로 단계적으로 구현합니다. </p> GitHub: <a href=\'https://github.com/nalsil/TensorflowSimApp\'>https://github.com/nalsil/TensorflowSimApp </a> <br/> 무료 참고 ebook: Building Mobile Applications with TensorFlow (<a href=\'http://www.oreilly.com/data/free/building-mobile-applications-with-tensorflow.csp\'>http://www.oreilly.com/data/free/building-mobile-applications-with-tensorflow.csp</a>)   ]]> "</string>
     <string name="app_company_name">John sungjin park</string>
     <string name="action_settings">설정</string>
     <string name="info_adview_comming">이곳에 광고가 나타납니다.</string>
